<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment1"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEntry"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:background="@color/white">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/form_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Enter menu.."
        app:layout_constraintBottom_toTopOf="@+id/check_veggie"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/form_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/form_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RatingBar
        android:id="@+id/form_ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="4"
        app:layout_constraintBottom_toTopOf="@+id/form_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/form_showEntry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Add Entry..."
        android:textSize="40dp"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="10dp" />

    <CheckBox
        android:id="@+id/check_meat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Meat"
        app:layout_constraintBottom_toTopOf="@+id/form_ratingBar"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/check_veggie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vegetarian"

        app:layout_constraintBottom_toTopOf="@+id/form_ratingBar"
        app:layout_constraintEnd_toStartOf="@+id/check_special"
        app:layout_constraintStart_toEndOf="@+id/check_meat" />

    <CheckBox
        android:id="@+id/check_special"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Special"
        app:layout_constraintBottom_toTopOf="@+id/form_ratingBar"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>