<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_addMeal"
        android:icon="@drawable/ic_plus"
        android:title="@string/add_meal" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_generate_icon"
        android:title="@string/title_dashboard"
        />

    <item
        android:id="@+id/navigation_overview"
        android:icon="@drawable/ic_overview"
        android:title="@string/title_overview" />

</menu>