<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/action_filter"
        android:title="@string/action_filter"
        android:icon="@drawable/ic_filter_states"
        app:showAsAction="always"
        android:visible="true"/>
</menu>